[project]
name = "syntheseus"
authors = [  # Note: PyPI does not support multiple authors with email addresses included.
    {name = "Austin Tripp"},       # ajt212@cam.ac.uk
    {name = "Krzysztof Maziarz"},  # krzysztof.maziarz@microsoft.com
    {name = "Guoqing Liu"},        # guoqingliu@microsoft.com
    {name = "Megan Stanley"},      # meganstanley@microsoft.com
    {name = "Marwin Segler"},      # marwinsegler@microsoft.com
]
requires-python = ">=3.9,<3.10"
version = "0.1.0"
dependencies = [ "more-itertools>=10.8.0,<11", "networkx>=3.2.1,<4", "rdkit>=2025.9.2,<2026", "tqdm>=4.67.1,<5", "pillow>=11.3.0,<12", "graphviz>=0.21,<0.22"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
syntheseus = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
graphviz = ">=14.1.0,<15"

[tool.pixi.environments]
default = { solve-group = "default" }
local-retro = { features = ["local-retro"], solve-group = "default" }

[dependency-groups]
local-retro = ["syntheseus-local-retro @ git+https://github.com/kmaziarz/LocalRetro.git", "numpy<2"]
